@@ -14,7 +14,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
@@ -128,6 +127,9 @@ public class CaseHearingRequestEntity extends BaseEntity implements Cloneable, S
     @Column(name = "hearing_request_received_date_time", nullable = false)
     private LocalDateTime hearingRequestReceivedDateTime;
 
+    @Column(name = "is_a_panel_flag", nullable = false)
+    private Boolean isAPanelFlag;
+
     @ManyToOne(fetch = FetchType.EAGER)
     @JoinColumn(name = "hearing_id")
     private HearingEntity hearing;
@@ -212,6 +214,19 @@ public class CaseHearingRequestEntity extends BaseEntity implements Cloneable, S
         this.cancellationReasons = original.cancellationReasons;
         this.hearingChannels = original.hearingChannels;
         this.amendReasonCodes = original.amendReasonCodes;
+        this.isAPanelFlag = original.isAPanelFlag;
+    }
+
+    public String getBooleanStringValue(Boolean flagBoolean) {
+        if (null != flagBoolean) {
+            return flagBoolean.toString();
+        } else {
+            return null;
+        }
+    }
+
+    public String getIsAPanelFlagString() {
+        return getBooleanStringValue(isAPanelFlag);
     }
 
     @Override
@@ -332,7 +347,7 @@ public class CaseHearingRequestEntity extends BaseEntity implements Cloneable, S
 
         final List<HearingPartyEntity> matchingHearingPartyEntities = hearingPartyEntities.stream()
             .filter(hearingPartyEntity -> relatedPartyId.equals(hearingPartyEntity.getPartyReference()))
-            .collect(Collectors.toList());
+            .toList();
 
         if (matchingHearingPartyEntities.size() != 1) {
             throw new BadRequestException(
